# sfmltemplate

./: .gitignore  CMakeLists.txt  main.cpp  sfmltest
.cache/clangd/index/: BlendMode.hpp.9A164D2D8B05A34A.idx  CircleShape.hpp.B632AD2DE3999CF3.idx  Clipboard.hpp.5C247ADC18125AE4.idx  Clock.hpp.F9B0055EBC15179D.idx  Color.hpp.1E51EDACD4F499B7.idx  Config.hpp.0630F13ADA5768F8.idx  Context.hpp.F43BD586EB7FB3E1.idx  ContextSettings.hpp.F9752D7A43F610AB.idx  ConvexShape.hpp.C870E52C2BC80D8C.idx  Cursor.hpp.FF2162DB1F3961A1.idx  Drawable.hpp.08EF3AD2DDA9724B.idx  Err.hpp.218292A5EA22F026.idx  Event.hpp.59B7117DE30722A0.idx  Export.hpp.4FF6D7A131AB0990.idx  Export.hpp.8956CE00A8C58030.idx  Export.hpp.FDA70B7E9241BFC3.idx  FileInputStream.hpp.2230AF7A17E1139A.idx  Font.hpp.D93779327A10E462.idx  GlResource.hpp.2A08EB86D9D7CC62.idx  Glsl.hpp.E8028562C3EA1C22.idx  Glsl.inl.D8876EA8A249C23B.idx  Glyph.hpp.D087DD2E5E70CB2B.idx  Graphics.hpp.58255B68670ADD31.idx  Image.hpp.2C15BD1200FD4734.idx  InputStream.hpp.7E9B0E3C24BCADE3.idx  Joystick.hpp.455A4A9392788B4A.idx  Keyboard.hpp.D6F828BEA1125A6C.idx  Lock.hpp.D8675A2AD4F42130.idx  MemoryInputStream.hpp.93BA88F0CCF66198.idx  Mouse.hpp.0BBFCF2BDF2FB07D.idx  Mutex.hpp.2AA84568418A6FC4.idx  NonCopyable.hpp.1BE00B43C5C46ABB.idx  PrimitiveType.hpp.CCD08C2DCE198F22.idx  Rect.hpp.79FA4445201399ED.idx  (+41 more)
SFML-2.5.1/: CMakeCache.txt  Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
SFML-2.5.1/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
(+12 files in other folders)
